[gd_scene load_steps=11 format=3 uid="uid://wavy321wdrbp"]

[ext_resource type="Script" uid="uid://bsc6lnr4kcrqo" path="res://Scripts/NodeScripts/scr_level_selection.gd" id="1_j1j1t"]
[ext_resource type="Texture2D" uid="uid://534j7f7h3hxg" path="res://Assets/2D/Background/T_Background.png" id="1_soba2"]
[ext_resource type="PackedScene" uid="uid://bhriw78r2eypq" path="res://Scenes/Levels/map_onboarding_level.tscn" id="2_0o6nl"]
[ext_resource type="FontFile" uid="uid://dd5vqpdollu01" path="res://Assets/UI/Fonts/Anubismythicalserif-lxdLy.otf" id="2_yqybe"]
[ext_resource type="PackedScene" uid="uid://bpy2ophuitlr0" path="res://Scenes/Levels/map_level_2.tscn" id="3_7lxqi"]
[ext_resource type="PackedScene" uid="uid://b8h86t24hbagi" path="res://Scenes/Levels/map_level_3.tscn" id="4_7lxqi"]
[ext_resource type="PackedScene" uid="uid://bs3w3a7ltl0jo" path="res://Scenes/Levels/map_level_4.tscn" id="5_ei1x0"]
[ext_resource type="PackedScene" uid="uid://x2pgpcr6n2qg" path="res://Scenes/UI/map_start_menu.tscn" id="6_e2ee3"]
[ext_resource type="PackedScene" uid="uid://wbkqtjla5v4i" path="res://Scenes/Levels/map_level_5.tscn" id="6_httek"]
[ext_resource type="PackedScene" uid="uid://c3aiwy0p2wxqw" path="res://Scenes/Levels/map_level_6.tscn" id="7_x2v41"]

[node name="world" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_j1j1t")
ex_total_levels = 6
ex_level_1 = ExtResource("2_0o6nl")
ex_level_2 = ExtResource("3_7lxqi")
ex_level_3 = ExtResource("4_7lxqi")
ex_level_4 = ExtResource("5_ei1x0")
ex_level_5 = ExtResource("6_httek")
ex_level_6 = ExtResource("7_x2v41")
ex_start_menu = ExtResource("6_e2ee3")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(576, 328)
scale = Vector2(0.619571, 0.62963)
texture = ExtResource("1_soba2")

[node name="Level_1" type="Button" parent="."]
layout_mode = 0
offset_left = 240.0
offset_top = 192.0
offset_right = 400.0
offset_bottom = 288.0
theme_override_fonts/font = ExtResource("2_yqybe")
theme_override_font_sizes/font_size = 32
text = "Level 1"

[node name="Level_2" type="Button" parent="."]
layout_mode = 0
offset_left = 496.0
offset_top = 192.0
offset_right = 656.0
offset_bottom = 288.0
theme_override_fonts/font = ExtResource("2_yqybe")
theme_override_font_sizes/font_size = 32
text = "Level 2"

[node name="Level_3" type="Button" parent="."]
layout_mode = 0
offset_left = 760.0
offset_top = 192.0
offset_right = 920.0
offset_bottom = 288.0
theme_override_fonts/font = ExtResource("2_yqybe")
theme_override_font_sizes/font_size = 32
text = "Level 3"

[node name="Level_4" type="Button" parent="."]
layout_mode = 0
offset_left = 240.0
offset_top = 384.0
offset_right = 400.0
offset_bottom = 480.0
theme_override_fonts/font = ExtResource("2_yqybe")
theme_override_font_sizes/font_size = 32
text = "Level 4"

[node name="Level_5" type="Button" parent="."]
layout_mode = 0
offset_left = 496.0
offset_top = 384.0
offset_right = 656.0
offset_bottom = 480.0
theme_override_fonts/font = ExtResource("2_yqybe")
theme_override_font_sizes/font_size = 32
text = "Level 5"

[node name="Level_6" type="Button" parent="."]
layout_mode = 0
offset_left = 760.0
offset_top = 384.0
offset_right = 920.0
offset_bottom = 480.0
theme_override_fonts/font = ExtResource("2_yqybe")
theme_override_font_sizes/font_size = 32
text = "Level 6"

[node name="Return_button" type="Button" parent="."]
layout_mode = 0
offset_left = 16.0
offset_top = 24.0
offset_right = 126.0
offset_bottom = 96.0
theme_override_fonts/font = ExtResource("2_yqybe")
theme_override_font_sizes/font_size = 32
text = "Return"

[connection signal="pressed" from="Level_1" to="." method="_on_level_1_pressed"]
[connection signal="pressed" from="Level_2" to="." method="_on_level_2_pressed"]
[connection signal="pressed" from="Level_3" to="." method="_on_level_3_pressed"]
[connection signal="pressed" from="Level_4" to="." method="_on_level_4_pressed"]
[connection signal="pressed" from="Level_5" to="." method="_on_level_5_pressed"]
[connection signal="pressed" from="Level_6" to="." method="_on_level_6_pressed"]
[connection signal="pressed" from="Return_button" to="." method="_on_return_button_pressed"]
